# rust-rest-api-service

./: .dockerignore  .gitignore  .pgcli_config.ini  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  mise.toml  pyproject.toml
.cargo/: config.toml
.mise-tasks/: build-image.sh  compose-down.sh  compose-up.sh  compose.sh  containers.sh  db-admin.sh  db-connect.sh  images.sh  ports.sh  status.sh  toggle.sh  volumes.sh
src/: event_handlers.rs  lib.rs  main.rs  users.rs
src/users/: user_data.rs  user_payload.rs
