[package]
name = "rust-rest-api-service"
version = "0.1.0"
edition = "2024"

[lib]
name = "lib_dot_rs"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
